Build v0.2.0 storage foundation
Refs #4
